force-app/main/default/objects/Occupancy_Status__c/Occupancy_Status__c.object-meta.xml
<CustomObject>
    <label>Occupancy Status</label>
    <nameField>
        <displayFormat>OS{0000}</displayFormat>
        <label>Occupancy Status ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Occupancy Statuses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>