force-app/main/default/objects/Occupancy_Status__c/fields/Occupant__c.field-meta.xml
<CustomField>
    <fullName>Occupant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The guest occupying the room.</description>
    <label>Occupant</label>
    <referenceTo>Guest__c</referenceTo>
    <relationshipLabel>Occupancy Statuses</relationshipLabel>
    <relationshipName>Occupancy_Statuses</relationshipName>
    <type>Lookup</type>
</CustomField>