force-app/main/default/objects/Occupancy_Status__c/fields/Room__c.field-meta.xml
<CustomField>
    <fullName>Room__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The room associated with this occupancy status.</description>
    <label>Room</label>
    <referenceTo>Room__c</referenceTo>
    <relationshipLabel>Occupancy Statuses</relationshipLabel>
    <relationshipName>Occupancy_Statuses</relationshipName>
    <type>Lookup</type>
</CustomField>