force-app/main/default/objects/Occupancy_Status__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>The occupancy status of the room.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Occupied</fullName>
            </value>
            <value>
                <fullName>Vacant</fullName>
            </value>
            <value>
                <fullName>Reserved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>